practical-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practical
spec:
  selector:
    matchLabels:
      app: practical
  replicas: 1
  template:
    metadata:
      labels:
        app: practical
    spec:
      containers:
      - name: practical
        image: martinskis/practical
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: practical
  labels:
    app: practical
spec:
  ports:
  - port: 3000
  type: NodePort
  selector:
    app: practical
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
      #alb.ingress.kubernetes.io/subnets: subnet-a4f0098e,subnet-457ed533,subnet-95c904cd
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:120437109327:certificate/d52c21b8-44d5-4dd2-a2f1-e3414965c84e
  name: main
  namespace: default
spec:
  rules:
    - host: practical.martinski.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: practical
              servicePort: 3000
